# Arc-theme

./: install.sh
common/: Makefile.am  index.theme
common/gtk-3.0/3.18/: gtk-contained-darker.css  gtk-contained-solid-darker.css  gtk-contained-solid.css  gtk-contained.css
common/gtk-3.0/3.18/sass/: ._colors.scss.swp  ._common.scss.swp  ._transparent_widgets.scss.swp  _colors.scss  _common.scss  _transparent_widgets.scss
